# fprime-preflight

./: .gitignore  README.md  pyproject.toml
examples/demo/: broken-cancel-buffer.yaml  dangling-ports.yaml  ref-cdh-snippet.yaml
fprime_preflight/: __init__.py  cli.py  doctor.py  planner.py  receipt.py  topology.py  validate.py
site/: app.js  index.html  sample_receipt.json  styles.css
tests/: test_preflight.py
